...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubscriptionActivity">

    <Switch
        android:id="@+id/sub_button_1"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:text="@string/sub_button_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
...
    <TextView
        android:id="@+id/news_publisher_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_publisher_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sub_button_2"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_publisher_1"
        app:layout_constraintVertical_bias="0.11" />

    <Switch
...
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_button_1"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/sub_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
...
