...
        android:icon="@drawable/ic_baseline_search_24" />
    <item
        android:id="@+id/action_forums"
        android:title="@string/title_forums"
        android:icon="@drawable/ic_baseline_forum_24"/>
    <item
        android:id="@+id/action_subscribed"
        android:title="@string/title_view_subscribed"
        android:icon="@drawable/ic_baseline_article_24"/>
</menu>
