...
    tools:showIn="@layout/activity_articles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticlesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</androidx.core.widget.NestedScrollView>
